--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <hr size="3dp">
   <a href="C:\Users\HP\Desktop\MY WEBSITE\index.html">Link to reopen.</a>
   <br>
-  <img src="C:\Users\HP\Desktop\SG2262\swapnilpic.jpg" alt="swapnil image" width="40" height="50">
+  <img src="swapnilpic.jpg" alt="swapnil image" width="40" height="50">
   <pre>
     swapnil      is     a    good
 
