--- a/education.html
+++ b/education.html
@@ -5,15 +5,28 @@
     <title></title>
   </head>
   <body style="background-color:yellow">
-    <pre>
- >> Bsc.(Hons.)Physics            -2023(pursuing)
+      <table border="2">
+        <tr>
+          <th>QUALIFICATION</th>
+          <th>PERFORMANCE</th>
+          <th>YEAR</th>
+        </tr>
 
- >> Intermediate with 96.83 %     -2020
-
- >> High School with  94.67 %     -2018
-
- </pre>
-
-
+ <tr>
+   <td> Bsc.(Hons.)Physics</td>
+   <td>PURSUING</td>
+   <td>2023</td>
+ </tr>
+ <tr>
+   <td> INTERMEDIATE</td>
+   <td>96.83 %</td>
+   <td>2020</td>
+ </tr>
+ <tr>
+   <td> HIGH SCHOOL</td>
+   <td>94.67 %</td>
+   <td>2018</td>
+ </tr>
+</table>
   </body>
 </html>
