--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
     <img src="swapnilpic.jpg" width="80"  height="90">
     <br>
     <hr size=3dp>
-    <b>Career Objective</b>
+    <ul>
+    <li><b>Career Objective</b></li>
     <br>
     <a href="objective.html">
     CLICK TO SEE OBJECTIVE
     </a>
     <br>
-    <b>Educational Qualification</b>
+    <li><b>Educational Qualification</b></li>
     <br>
     <a href="education.html">
     CLICK TO SEE QUALIFICATION
     </a>
     <br>
-    <b>Contact</b>
+    <li><b>Contact </b></li>
     <br>
     <a href="contact.html">
     CLICK TO SEE CONTACT
     </a>
+  </ul>
   </body>
 </html>
